# kafka_plugin

./: CMakeLists.txt  README.md  kafka_plugin.cpp  kafka_producer.cpp
include/eosio/kafka_plugin/: kafka_plugin.hpp  kafka_producer.hpp
